--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/vue-fontawesome": "^3.0.0-3",
     "@popperjs/core": "^2.9.2",
+    "babel-plugin-prismjs": "^2.0.1",
     "bootstrap": "^5.0.1",
     "core-js": "^3.6.5",
     "firebase": "^8.4.1",
+    "prismjs": "^1.23.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0",
