1. 改寫登入註冊 2. 改寫sidebar滑動的邏輯 3. img組件增加貼上的是圖片網址也可以顯示 4. 新增LinkPreview組件，貼上連結可以顯示網址資。使用到link previewAPI 5. pageHistory修改為recentPageIds，目前功能還沒修改好，下一次更新修改 6. Workspace組件邏輯封裝 7. 新增Header組件，breadcrumb組件放裡面

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "core-js": "^3.6.5",
     "firebase": "^8.4.1",
     "prismjs": "^1.23.0",
+    "secure-ls": "^1.2.6",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0",
